# swagger_output.json
@@ -213,7 +213,7 @@
                 "condition": {
                   "example": "any"
                 },
-                "zipcode": {
+                "zipCode": {
                   "example": "any"
                 },
                 "priorities": {
@@ -287,7 +287,7 @@
                 "condition": {
                   "example": "any"
                 },
-                "zipcode": {
+                "zipCode": {
                   "example": "any"
                 },
                 "priorities": {
@@ -617,6 +617,35 @@
       }
     },
     "/tour/": {
+      "get": {
+        "tags": [
+          "tour"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "title",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
       "post": {
         "tags": [
           "tour"
@@ -740,7 +769,7 @@
     "/tour/change-status/{id}": {
       "post": {
         "tags": [
-          "Tour"
+          "tour"
         ],
         "description": "",
         "parameters": [
@@ -767,6 +796,35 @@
       }
     },
     "/article/": {
+      "get": {
+        "tags": [
+          "articles"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "title",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
       "post": {
         "tags": [
           "article"
@@ -792,6 +850,37 @@
                 }
               }
             }
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/article/mine": {
+      "get": {
+        "tags": [
+          "articles"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "title",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {}
@@ -826,6 +915,11 @@
             "type": "string"
           },
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -853,6 +947,50 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/article/like/{id}": {
+      "get": {
+        "tags": [
+          "article"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/article/dislike/{id}": {
+      "get": {
+        "tags": [
+          "article"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
